Initial update for database

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Michael Herman <michael@mherman.org>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.10.2",
     "chai": "~1.8.1",
     "connect-flash": "^0.1.1",
@@ -24,6 +25,7 @@
     "mocha": "~1.14.0",
     "mongoose": "^4.4.1",
     "morgan": "^1.5.1",
+    "mysql": "^2.15.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
